tests/fixtures/invalid/pow_bool_float_int.py
# Cannot call pow() with Bool, Float, Int
x = pow(True, 1.0, 1)
